stats redesign